--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "alertanatural-front": "file:",
     "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.1",
     "vite": "^6.1.1"
   },
