--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-oauth/google": "^0.12.1",
     "alertanatural-front": "file:",
     "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
