--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "alertanatural-front": "file:",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
